# packaging_tutorial

./: pyproject.toml
test_package/: example.py
