[tool.poetry]
name = "test_package"
version = "0.1.0"
description = ""
authors = ["train <natalya7oct@gmail.com@example.com>"]
readme = "README.md"
packages = [{include = "test_package"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
opencv-python = "^4.8.0.74"
tensorflow = { version = "^2.11.0", python = ">=3.10,<3.12"}
torch = {version = "^2.0.1", python = "^3.10"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


